--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/saisantosh1998/BonStay#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cls-rtracer": "^2.6.0",
     "express": "^4.17.1",
     "mongoose": "^6.1.0",
     "nodemon": "^2.0.15",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-logger": "^1.0.1"
   }
 }
